# almamater-db

./: .gitignore  DATA_SOURCES.md  LICENSE  NOTICE  README.md  README.zh.md  pyproject.toml  requirements.txt
almamater/: __init__.py  build.py  cli.py  convert_syl_html.py  country_map.py  name_map.py  schema.py
almamater/sources/: china_edu.py  intl_aliases.py  qs_subject.py  qs_world.py  shuangyiliu.py
data/: intl_aliases.json  shuangyiliu_round1.json  shuangyiliu_round2.json
tests/: conftest.py  test_build.py  test_query_matching.py  test_shuangyiliu.py
