[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "almamater-db"
version = "0.1.0"
description = "University quality database: 985/211/双一流 + QS rankings, with Chinese/English alias matching"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "lxml>=4.9",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pydantic>=2.5",
    "rapidfuzz>=3.0",
]

[project.scripts]
amdb = "almamater.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["almamater*"]

[tool.setuptools.package-data]
almamater = []
